--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "webpack-dev-server": "^3.10.3"
     },
     "dependencies": {
-        "redux": "^4.2.1"
+        "@reduxjs/toolkit": "^1.9.5",
+        "redux": "^4.2.1",
+        "redux-devtools-extension": "^2.13.9"
     }
 }
