--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.5",
         "redux": "^4.2.1",
-        "redux-devtools-extension": "^2.13.9"
+        "redux-devtools-extension": "^2.13.9",
+        "redux-logger": "^3.0.6"
     }
 }
